chore: test Java 21 (#636)
This matches the official policy:
https://cloud.google.com/java/docs/supported-java-versions